# MIle_Stone_2

./: AStar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  CompareCost.cpp  CompareG.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MatrixConverter.h  MatrixConverterNotGoodExample.h  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OA.h  OT.h  Point.cpp  Point.h  README.md  RunThread.h  Searchable.h  Searcher.h  Server.h  Solver.cpp  Solver.h  State.h  StringReverser.cpp  StringReverser.h  gitLog.txt  main.cpp
task/: command.txt
task/HW4_FILES/: Matrix1.txt  Matrix10.txt  Matrix2.txt  Matrix3.txt  Matrix4.txt  Matrix5.txt  Matrix6.txt  Matrix7.txt  Matrix8.txt  Matrix9.txt  StringReverser.py  auto_client.py  fake_server.py  matrix_test (another copy).txt  matrix_test.txt  matrix_test_output.txt  parallel_tester.py
